hphp/test/slow/reified-generics/reified-param-primitive-2b.php.expectf

Warning: Argument 1 passed to f() must be an instance of D<(C<int>, string)>, D<(C<string>,string)> given in %s on line 6

Catchable fatal error: Argument 1 passed to f() must be an instance of D<(C<int>, int)>, D<(C<string>,string)> given in %s on line 13
